<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:animateLayoutChanges="true"
    tools:parentTag="androidx.constraintlayout.widget.ConstraintLayout">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/top_background_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottom_background_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.65" />

    <View
        android:id="@+id/top_background"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/lura_control_bar_top_background"
        app:layout_constraintBottom_toTopOf="@id/top_background_guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/bottom_background"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/lura_control_bar_bottom_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bottom_background_guideline" />

    <TextView
        android:id="@+id/adTitleView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="8dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/luraAdTitle"
        android:textColor="@color/lura_text_color"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/controls_layout"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.akta.luraplayercontrols.ui.LuraImageButton
            android:id="@+id/adPlayPauseView"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:background="@drawable/lura_button_selector"
            android:contentDescription="@string/play"
            android:scaleType="center"
            android:src="@drawable/play" />

        <com.akta.luraplayercontrols.ui.LuraImageButton
            android:id="@+id/adMuteUnmuteView"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:background="@drawable/lura_button_selector"
            android:contentDescription="@string/mute"
            android:scaleType="center"
            android:src="@drawable/mute" />

        <TextView
            android:id="@+id/adTimeView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="10dp"
            android:layout_weight="1"
            android:drawableStart="@drawable/lura_live_ad_indicator"
            android:drawablePadding="6dp"
            android:gravity="center_vertical"
            android:textColor="@color/lura_text_color"
            android:textSize="13sp"
            tools:ignore="UseCompatTextViewDrawableXml" />

        <com.akta.luraplayercontrols.ui.LuraImageButton
            android:id="@+id/adFullscreenView"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:background="@drawable/lura_button_selector"
            android:contentDescription="@string/fullscreen"
            android:scaleType="center"
            android:src="@drawable/fullscreen_on" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/interaction_layout"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/adProgressView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/ad_count"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:background="@drawable/lura_ad_skip_button_background"
            android:gravity="center"
            android:paddingHorizontal="8dp"
             android:text="@string/luraAd"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.akta.luraplayercontrols.ui.LuraAdSkipButton
            android:id="@+id/skip_button"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:id="@+id/adProgressView"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="@dimen/seekbar_height"
        android:progressDrawable="@drawable/lura_ad_progress"
        app:layout_constraintBottom_toTopOf="@+id/controls_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</merge>